src/parser.automaton
State 0:
## Known stack suffix:
##
## LR(1) items:
program' -> . program [ # ]
## Transitions:
-- On tdecls shift to state 1
-- On program shift to state 198
## Reductions:
-- On TYPE LET
--   reduce production tdecls ->

State 1:
## Known stack suffix:
## tdecls
## LR(1) items:
program -> tdecls . lexprs EOF [ # ]
tdecls -> tdecls . tdecl [ TYPE LET ]
## Transitions:
-- On TYPE shift to state 2
-- On LET shift to state 52
-- On tdecl shift to state 195
-- On lexprs shift to state 196
-- On lexpr shift to state 194
## Reductions:

State 2:
## Known stack suffix:
## TYPE
## LR(1) items:
tdecl -> TYPE . NAME ASSIGN type_expr [ TYPE LET ]
## Transitions:
-- On NAME shift to state 3
## Reductions:

State 3:
## Known stack suffix:
## TYPE NAME
## LR(1) items:
tdecl -> TYPE NAME . ASSIGN type_expr [ TYPE LET ]
## Transitions:
-- On ASSIGN shift to state 4
## Reductions:

State 4:
## Known stack suffix:
## TYPE NAME ASSIGN
## LR(1) items:
tdecl -> TYPE NAME ASSIGN . type_expr [ TYPE LET ]
## Transitions:
-- On VOID shift to state 5
-- On STRING shift to state 6
-- On NAME shift to state 7
-- On LPAREN shift to state 24
-- On LBRACE shift to state 25
-- On INT shift to state 33
-- On FLOAT shift to state 34
-- On BOOL shift to state 35
-- On type_expr shift to state 51
-- On adt_type_expr shift to state 44
-- On adt_opt shift to state 47
## Reductions:

State 5:
## Known stack suffix:
## VOID
## LR(1) items:
type_expr -> VOID . [ TYPE STAR RPAREN RING POLY LIST LET GROUP FIELD ARROW ]
## Transitions:
## Reductions:
-- On TYPE STAR RPAREN RING POLY LIST LET GROUP FIELD ARROW
--   reduce production type_expr -> VOID

State 6:
## Known stack suffix:
## STRING
## LR(1) items:
type_expr -> STRING . [ TYPE STAR RPAREN RING POLY LIST LET GROUP FIELD ARROW ]
## Transitions:
## Reductions:
-- On TYPE STAR RPAREN RING POLY LIST LET GROUP FIELD ARROW
--   reduce production type_expr -> STRING

State 7:
## Known stack suffix:
## NAME
## LR(1) items:
adt_type_expr -> NAME . [ TYPE STAR RPAREN RING POLY LIST LET GROUP FIELD BAR ARROW ]
adt_type_expr -> NAME . OF type_name [ TYPE STAR RPAREN RING POLY LIST LET GROUP FIELD BAR ARROW ]
## Transitions:
-- On OF shift to state 8
## Reductions:
-- On TYPE STAR RPAREN RING POLY LIST LET GROUP FIELD BAR ARROW
--   reduce production adt_type_expr -> NAME

State 8:
## Known stack suffix:
## NAME OF
## LR(1) items:
adt_type_expr -> NAME OF . type_name [ TYPE STAR RPAREN RING POLY LIST LET GROUP FIELD BAR ARROW ]
## Transitions:
-- On STRING shift to state 9
-- On NAME shift to state 10
-- On INT shift to state 11
-- On FLOAT shift to state 12
-- On BOOL shift to state 13
-- On type_name shift to state 14
## Reductions:

State 9:
## Known stack suffix:
## STRING
## LR(1) items:
type_name -> STRING . [ TYPE STRINGLIT STAR RPAREN RING RBRACE PRINT POLY NOT NAME MINUS LPAREN LITERAL LIST LET LBRACKET LBRACE IF GROUP FUNCTION FLIT FIELD COMMA BLIT BAR ARROW ADTNAME ]
## Transitions:
## Reductions:
-- On TYPE STRINGLIT STAR RPAREN RING RBRACE PRINT POLY NOT NAME MINUS LPAREN LITERAL LIST LET LBRACKET LBRACE IF GROUP FUNCTION FLIT FIELD COMMA BLIT BAR ARROW ADTNAME
--   reduce production type_name -> STRING

State 10:
## Known stack suffix:
## NAME
## LR(1) items:
type_name -> NAME . [ TYPE STRINGLIT STAR RPAREN RING RBRACE PRINT POLY NOT NAME MINUS LPAREN LITERAL LIST LET LBRACKET LBRACE IF GROUP FUNCTION FLIT FIELD COMMA BLIT BAR ARROW ADTNAME ]
## Transitions:
## Reductions:
-- On TYPE STRINGLIT STAR RPAREN RING RBRACE PRINT POLY NOT NAME MINUS LPAREN LITERAL LIST LET LBRACKET LBRACE IF GROUP FUNCTION FLIT FIELD COMMA BLIT BAR ARROW ADTNAME
--   reduce production type_name -> NAME

State 11:
## Known stack suffix:
## INT
## LR(1) items:
type_name -> INT . [ TYPE STRINGLIT STAR RPAREN RING RBRACE PRINT POLY NOT NAME MINUS LPAREN LITERAL LIST LET LBRACKET LBRACE IF GROUP FUNCTION FLIT FIELD COMMA BLIT BAR ARROW ADTNAME ]
## Transitions:
## Reductions:
-- On TYPE STRINGLIT STAR RPAREN RING RBRACE PRINT POLY NOT NAME MINUS LPAREN LITERAL LIST LET LBRACKET LBRACE IF GROUP FUNCTION FLIT FIELD COMMA BLIT BAR ARROW ADTNAME
--   reduce production type_name -> INT

State 12:
## Known stack suffix:
## FLOAT
## LR(1) items:
type_name -> FLOAT . [ TYPE STRINGLIT STAR RPAREN RING RBRACE PRINT POLY NOT NAME MINUS LPAREN LITERAL LIST LET LBRACKET LBRACE IF GROUP FUNCTION FLIT FIELD COMMA BLIT BAR ARROW ADTNAME ]
## Transitions:
## Reductions:
-- On TYPE STRINGLIT STAR RPAREN RING RBRACE PRINT POLY NOT NAME MINUS LPAREN LITERAL LIST LET LBRACKET LBRACE IF GROUP FUNCTION FLIT FIELD COMMA BLIT BAR ARROW ADTNAME
--   reduce production type_name -> FLOAT

State 13:
## Known stack suffix:
## BOOL
## LR(1) items:
type_name -> BOOL . [ TYPE STRINGLIT STAR RPAREN RING RBRACE PRINT POLY NOT NAME MINUS LPAREN LITERAL LIST LET LBRACKET LBRACE IF GROUP FUNCTION FLIT FIELD COMMA BLIT BAR ARROW ADTNAME ]
## Transitions:
## Reductions:
-- On TYPE STRINGLIT STAR RPAREN RING RBRACE PRINT POLY NOT NAME MINUS LPAREN LITERAL LIST LET LBRACKET LBRACE IF GROUP FUNCTION FLIT FIELD COMMA BLIT BAR ARROW ADTNAME
--   reduce production type_name -> BOOL

State 14:
## Known stack suffix:
## NAME OF type_name
## LR(1) items:
adt_type_expr -> NAME OF type_name . [ TYPE STAR RPAREN RING POLY LIST LET GROUP FIELD BAR ARROW ]
type_name -> type_name . LIST [ TYPE STAR RPAREN RING POLY LIST LET GROUP FIELD BAR ARROW ]
type_name -> type_name . STAR type_name [ TYPE STAR RPAREN RING POLY LIST LET GROUP FIELD BAR ARROW ]
type_name -> type_name . ARROW type_name [ TYPE STAR RPAREN RING POLY LIST LET GROUP FIELD BAR ARROW ]
type_name -> type_name . GROUP [ TYPE STAR RPAREN RING POLY LIST LET GROUP FIELD BAR ARROW ]
type_name -> type_name . RING [ TYPE STAR RPAREN RING POLY LIST LET GROUP FIELD BAR ARROW ]
type_name -> type_name . FIELD [ TYPE STAR RPAREN RING POLY LIST LET GROUP FIELD BAR ARROW ]
type_name -> type_name . POLY [ TYPE STAR RPAREN RING POLY LIST LET GROUP FIELD BAR ARROW ]
## Transitions:
-- On STAR shift to state 15
-- On RING shift to state 17
-- On POLY shift to state 18
-- On LIST shift to state 19
-- On GROUP shift to state 20
-- On FIELD shift to state 21
-- On ARROW shift to state 22
## Reductions:
-- On TYPE STAR RPAREN RING POLY LIST LET GROUP FIELD BAR ARROW
--   reduce production adt_type_expr -> NAME OF type_name
** Conflict on STAR RING POLY LIST GROUP FIELD ARROW

State 15:
## Known stack suffix:
## type_name STAR
## LR(1) items:
type_name -> type_name STAR . type_name [ TYPE STRINGLIT STAR RPAREN RING RBRACE PRINT POLY NOT NAME MINUS LPAREN LITERAL LIST LET LBRACKET LBRACE IF GROUP FUNCTION FLIT FIELD COMMA BLIT BAR ARROW ADTNAME ]
## Transitions:
-- On STRING shift to state 9
-- On NAME shift to state 10
-- On INT shift to state 11
-- On FLOAT shift to state 12
-- On BOOL shift to state 13
-- On type_name shift to state 16
## Reductions:

State 16:
## Known stack suffix:
## type_name STAR type_name
## LR(1) items:
type_name -> type_name . LIST [ TYPE STRINGLIT STAR RPAREN RING RBRACE PRINT POLY NOT NAME MINUS LPAREN LITERAL LIST LET LBRACKET LBRACE IF GROUP FUNCTION FLIT FIELD COMMA BLIT BAR ARROW ADTNAME ]
type_name -> type_name . STAR type_name [ TYPE STRINGLIT STAR RPAREN RING RBRACE PRINT POLY NOT NAME MINUS LPAREN LITERAL LIST LET LBRACKET LBRACE IF GROUP FUNCTION FLIT FIELD COMMA BLIT BAR ARROW ADTNAME ]
type_name -> type_name STAR type_name . [ TYPE STRINGLIT STAR RPAREN RING RBRACE PRINT POLY NOT NAME MINUS LPAREN LITERAL LIST LET LBRACKET LBRACE IF GROUP FUNCTION FLIT FIELD COMMA BLIT BAR ARROW ADTNAME ]
type_name -> type_name . ARROW type_name [ TYPE STRINGLIT STAR RPAREN RING RBRACE PRINT POLY NOT NAME MINUS LPAREN LITERAL LIST LET LBRACKET LBRACE IF GROUP FUNCTION FLIT FIELD COMMA BLIT BAR ARROW ADTNAME ]
type_name -> type_name . GROUP [ TYPE STRINGLIT STAR RPAREN RING RBRACE PRINT POLY NOT NAME MINUS LPAREN LITERAL LIST LET LBRACKET LBRACE IF GROUP FUNCTION FLIT FIELD COMMA BLIT BAR ARROW ADTNAME ]
type_name -> type_name . RING [ TYPE STRINGLIT STAR RPAREN RING RBRACE PRINT POLY NOT NAME MINUS LPAREN LITERAL LIST LET LBRACKET LBRACE IF GROUP FUNCTION FLIT FIELD COMMA BLIT BAR ARROW ADTNAME ]
type_name -> type_name . FIELD [ TYPE STRINGLIT STAR RPAREN RING RBRACE PRINT POLY NOT NAME MINUS LPAREN LITERAL LIST LET LBRACKET LBRACE IF GROUP FUNCTION FLIT FIELD COMMA BLIT BAR ARROW ADTNAME ]
type_name -> type_name . POLY [ TYPE STRINGLIT STAR RPAREN RING RBRACE PRINT POLY NOT NAME MINUS LPAREN LITERAL LIST LET LBRACKET LBRACE IF GROUP FUNCTION FLIT FIELD COMMA BLIT BAR ARROW ADTNAME ]
## Transitions:
-- On RING shift to state 17
-- On POLY shift to state 18
-- On LIST shift to state 19
-- On GROUP shift to state 20
-- On FIELD shift to state 21
## Reductions:
-- On TYPE STRINGLIT STAR RPAREN RING RBRACE PRINT POLY NOT NAME MINUS LPAREN LITERAL LIST LET LBRACKET LBRACE IF GROUP FUNCTION FLIT FIELD COMMA BLIT BAR ARROW ADTNAME
--   reduce production type_name -> type_name STAR type_name
** Conflict on RING POLY LIST GROUP FIELD

State 17:
## Known stack suffix:
## type_name RING
## LR(1) items:
type_name -> type_name RING . [ TYPE STRINGLIT STAR RPAREN RING RBRACE PRINT POLY NOT NAME MINUS LPAREN LITERAL LIST LET LBRACKET LBRACE IF GROUP FUNCTION FLIT FIELD COMMA BLIT BAR ARROW ADTNAME ]
## Transitions:
## Reductions:
-- On TYPE STRINGLIT STAR RPAREN RING RBRACE PRINT POLY NOT NAME MINUS LPAREN LITERAL LIST LET LBRACKET LBRACE IF GROUP FUNCTION FLIT FIELD COMMA BLIT BAR ARROW ADTNAME
--   reduce production type_name -> type_name RING

State 18:
## Known stack suffix:
## type_name POLY
## LR(1) items:
type_name -> type_name POLY . [ TYPE STRINGLIT STAR RPAREN RING RBRACE PRINT POLY NOT NAME MINUS LPAREN LITERAL LIST LET LBRACKET LBRACE IF GROUP FUNCTION FLIT FIELD COMMA BLIT BAR ARROW ADTNAME ]
## Transitions:
## Reductions:
-- On TYPE STRINGLIT STAR RPAREN RING RBRACE PRINT POLY NOT NAME MINUS LPAREN LITERAL LIST LET LBRACKET LBRACE IF GROUP FUNCTION FLIT FIELD COMMA BLIT BAR ARROW ADTNAME
--   reduce production type_name -> type_name POLY

State 19:
## Known stack suffix:
## type_name LIST
## LR(1) items:
type_name -> type_name LIST . [ TYPE STRINGLIT STAR RPAREN RING RBRACE PRINT POLY NOT NAME MINUS LPAREN LITERAL LIST LET LBRACKET LBRACE IF GROUP FUNCTION FLIT FIELD COMMA BLIT BAR ARROW ADTNAME ]
## Transitions:
## Reductions:
-- On TYPE STRINGLIT STAR RPAREN RING RBRACE PRINT POLY NOT NAME MINUS LPAREN LITERAL LIST LET LBRACKET LBRACE IF GROUP FUNCTION FLIT FIELD COMMA BLIT BAR ARROW ADTNAME
--   reduce production type_name -> type_name LIST

State 20:
## Known stack suffix:
## type_name GROUP
## LR(1) items:
type_name -> type_name GROUP . [ TYPE STRINGLIT STAR RPAREN RING RBRACE PRINT POLY NOT NAME MINUS LPAREN LITERAL LIST LET LBRACKET LBRACE IF GROUP FUNCTION FLIT FIELD COMMA BLIT BAR ARROW ADTNAME ]
## Transitions:
## Reductions:
-- On TYPE STRINGLIT STAR RPAREN RING RBRACE PRINT POLY NOT NAME MINUS LPAREN LITERAL LIST LET LBRACKET LBRACE IF GROUP FUNCTION FLIT FIELD COMMA BLIT BAR ARROW ADTNAME
--   reduce production type_name -> type_name GROUP

State 21:
## Known stack suffix:
## type_name FIELD
## LR(1) items:
type_name -> type_name FIELD . [ TYPE STRINGLIT STAR RPAREN RING RBRACE PRINT POLY NOT NAME MINUS LPAREN LITERAL LIST LET LBRACKET LBRACE IF GROUP FUNCTION FLIT FIELD COMMA BLIT BAR ARROW ADTNAME ]
## Transitions:
## Reductions:
-- On TYPE STRINGLIT STAR RPAREN RING RBRACE PRINT POLY NOT NAME MINUS LPAREN LITERAL LIST LET LBRACKET LBRACE IF GROUP FUNCTION FLIT FIELD COMMA BLIT BAR ARROW ADTNAME
--   reduce production type_name -> type_name FIELD

State 22:
## Known stack suffix:
## type_name ARROW
## LR(1) items:
type_name -> type_name ARROW . type_name [ TYPE STRINGLIT STAR RPAREN RING RBRACE PRINT POLY NOT NAME MINUS LPAREN LITERAL LIST LET LBRACKET LBRACE IF GROUP FUNCTION FLIT FIELD COMMA BLIT BAR ARROW ADTNAME ]
## Transitions:
-- On STRING shift to state 9
-- On NAME shift to state 10
-- On INT shift to state 11
-- On FLOAT shift to state 12
-- On BOOL shift to state 13
-- On type_name shift to state 23
## Reductions:

State 23:
## Known stack suffix:
## type_name ARROW type_name
## LR(1) items:
type_name -> type_name . LIST [ TYPE STRINGLIT STAR RPAREN RING RBRACE PRINT POLY NOT NAME MINUS LPAREN LITERAL LIST LET LBRACKET LBRACE IF GROUP FUNCTION FLIT FIELD COMMA BLIT BAR ARROW ADTNAME ]
type_name -> type_name . STAR type_name [ TYPE STRINGLIT STAR RPAREN RING RBRACE PRINT POLY NOT NAME MINUS LPAREN LITERAL LIST LET LBRACKET LBRACE IF GROUP FUNCTION FLIT FIELD COMMA BLIT BAR ARROW ADTNAME ]
type_name -> type_name . ARROW type_name [ TYPE STRINGLIT STAR RPAREN RING RBRACE PRINT POLY NOT NAME MINUS LPAREN LITERAL LIST LET LBRACKET LBRACE IF GROUP FUNCTION FLIT FIELD COMMA BLIT BAR ARROW ADTNAME ]
type_name -> type_name ARROW type_name . [ TYPE STRINGLIT STAR RPAREN RING RBRACE PRINT POLY NOT NAME MINUS LPAREN LITERAL LIST LET LBRACKET LBRACE IF GROUP FUNCTION FLIT FIELD COMMA BLIT BAR ARROW ADTNAME ]
type_name -> type_name . GROUP [ TYPE STRINGLIT STAR RPAREN RING RBRACE PRINT POLY NOT NAME MINUS LPAREN LITERAL LIST LET LBRACKET LBRACE IF GROUP FUNCTION FLIT FIELD COMMA BLIT BAR ARROW ADTNAME ]
type_name -> type_name . RING [ TYPE STRINGLIT STAR RPAREN RING RBRACE PRINT POLY NOT NAME MINUS LPAREN LITERAL LIST LET LBRACKET LBRACE IF GROUP FUNCTION FLIT FIELD COMMA BLIT BAR ARROW ADTNAME ]
type_name -> type_name . FIELD [ TYPE STRINGLIT STAR RPAREN RING RBRACE PRINT POLY NOT NAME MINUS LPAREN LITERAL LIST LET LBRACKET LBRACE IF GROUP FUNCTION FLIT FIELD COMMA BLIT BAR ARROW ADTNAME ]
type_name -> type_name . POLY [ TYPE STRINGLIT STAR RPAREN RING RBRACE PRINT POLY NOT NAME MINUS LPAREN LITERAL LIST LET LBRACKET LBRACE IF GROUP FUNCTION FLIT FIELD COMMA BLIT BAR ARROW ADTNAME ]
## Transitions:
-- On STAR shift to state 15
-- On RING shift to state 17
-- On POLY shift to state 18
-- On LIST shift to state 19
-- On GROUP shift to state 20
-- On FIELD shift to state 21
## Reductions:
-- On TYPE STRINGLIT RPAREN RING RBRACE PRINT POLY NOT NAME MINUS LPAREN LITERAL LIST LET LBRACKET LBRACE IF GROUP FUNCTION FLIT FIELD COMMA BLIT BAR ARROW ADTNAME
--   reduce production type_name -> type_name ARROW type_name
** Conflict on RING POLY LIST GROUP FIELD

State 24:
## Known stack suffix:
## LPAREN
## LR(1) items:
type_expr -> LPAREN . type_expr RPAREN [ TYPE STAR RPAREN RING POLY LIST LET GROUP FIELD ARROW ]
## Transitions:
-- On VOID shift to state 5
-- On STRING shift to state 6
-- On NAME shift to state 7
-- On LPAREN shift to state 24
-- On LBRACE shift to state 25
-- On INT shift to state 33
-- On FLOAT shift to state 34
-- On BOOL shift to state 35
-- On type_expr shift to state 36
-- On adt_type_expr shift to state 44
-- On adt_opt shift to state 47
## Reductions:

State 25:
## Known stack suffix:
## LBRACE
## LR(1) items:
type_expr -> LBRACE . struct_decl_body RBRACE [ TYPE STAR RPAREN RING POLY LIST LET GROUP FIELD ARROW ]
## Transitions:
-- On NAME shift to state 26
-- On struct_decl_body shift to state 31
## Reductions:

State 26:
## Known stack suffix:
## NAME
## LR(1) items:
struct_decl_body -> NAME . COLON type_name [ RBRACE ]
struct_decl_body -> NAME . COLON type_name COMMA struct_decl_body [ RBRACE ]
## Transitions:
-- On COLON shift to state 27
## Reductions:

State 27:
## Known stack suffix:
## NAME COLON
## LR(1) items:
struct_decl_body -> NAME COLON . type_name [ RBRACE ]
struct_decl_body -> NAME COLON . type_name COMMA struct_decl_body [ RBRACE ]
## Transitions:
-- On STRING shift to state 9
-- On NAME shift to state 10
-- On INT shift to state 11
-- On FLOAT shift to state 12
-- On BOOL shift to state 13
-- On type_name shift to state 28
## Reductions:

State 28:
## Known stack suffix:
## NAME COLON type_name
## LR(1) items:
struct_decl_body -> NAME COLON type_name . [ RBRACE ]
struct_decl_body -> NAME COLON type_name . COMMA struct_decl_body [ RBRACE ]
type_name -> type_name . LIST [ STAR RING RBRACE POLY LIST GROUP FIELD COMMA ARROW ]
type_name -> type_name . STAR type_name [ STAR RING RBRACE POLY LIST GROUP FIELD COMMA ARROW ]
type_name -> type_name . ARROW type_name [ STAR RING RBRACE POLY LIST GROUP FIELD COMMA ARROW ]
type_name -> type_name . GROUP [ STAR RING RBRACE POLY LIST GROUP FIELD COMMA ARROW ]
type_name -> type_name . RING [ STAR RING RBRACE POLY LIST GROUP FIELD COMMA ARROW ]
type_name -> type_name . FIELD [ STAR RING RBRACE POLY LIST GROUP FIELD COMMA ARROW ]
type_name -> type_name . POLY [ STAR RING RBRACE POLY LIST GROUP FIELD COMMA ARROW ]
## Transitions:
-- On STAR shift to state 15
-- On RING shift to state 17
-- On POLY shift to state 18
-- On LIST shift to state 19
-- On GROUP shift to state 20
-- On FIELD shift to state 21
-- On COMMA shift to state 29
-- On ARROW shift to state 22
## Reductions:
-- On RBRACE
--   reduce production struct_decl_body -> NAME COLON type_name

State 29:
## Known stack suffix:
## NAME COLON type_name COMMA
## LR(1) items:
struct_decl_body -> NAME COLON type_name COMMA . struct_decl_body [ RBRACE ]
## Transitions:
-- On NAME shift to state 26
-- On struct_decl_body shift to state 30
## Reductions:

State 30:
## Known stack suffix:
## NAME COLON type_name COMMA struct_decl_body
## LR(1) items:
struct_decl_body -> NAME COLON type_name COMMA struct_decl_body . [ RBRACE ]
## Transitions:
## Reductions:
-- On RBRACE
--   reduce production struct_decl_body -> NAME COLON type_name COMMA struct_decl_body

State 31:
## Known stack suffix:
## LBRACE struct_decl_body
## LR(1) items:
type_expr -> LBRACE struct_decl_body . RBRACE [ TYPE STAR RPAREN RING POLY LIST LET GROUP FIELD ARROW ]
## Transitions:
-- On RBRACE shift to state 32
## Reductions:

State 32:
## Known stack suffix:
## LBRACE struct_decl_body RBRACE
## LR(1) items:
type_expr -> LBRACE struct_decl_body RBRACE . [ TYPE STAR RPAREN RING POLY LIST LET GROUP FIELD ARROW ]
## Transitions:
## Reductions:
-- On TYPE STAR RPAREN RING POLY LIST LET GROUP FIELD ARROW
--   reduce production type_expr -> LBRACE struct_decl_body RBRACE

State 33:
## Known stack suffix:
## INT
## LR(1) items:
type_expr -> INT . [ TYPE STAR RPAREN RING POLY LIST LET GROUP FIELD ARROW ]
## Transitions:
## Reductions:
-- On TYPE STAR RPAREN RING POLY LIST LET GROUP FIELD ARROW
--   reduce production type_expr -> INT

State 34:
## Known stack suffix:
## FLOAT
## LR(1) items:
type_expr -> FLOAT . [ TYPE STAR RPAREN RING POLY LIST LET GROUP FIELD ARROW ]
## Transitions:
## Reductions:
-- On TYPE STAR RPAREN RING POLY LIST LET GROUP FIELD ARROW
--   reduce production type_expr -> FLOAT

State 35:
## Known stack suffix:
## BOOL
## LR(1) items:
type_expr -> BOOL . [ TYPE STAR RPAREN RING POLY LIST LET GROUP FIELD ARROW ]
## Transitions:
## Reductions:
-- On TYPE STAR RPAREN RING POLY LIST LET GROUP FIELD ARROW
--   reduce production type_expr -> BOOL

State 36:
## Known stack suffix:
## LPAREN type_expr
## LR(1) items:
type_expr -> type_expr . LIST [ STAR RPAREN RING POLY LIST GROUP FIELD ARROW ]
type_expr -> type_expr . STAR type_expr [ STAR RPAREN RING POLY LIST GROUP FIELD ARROW ]
type_expr -> type_expr . ARROW type_expr [ STAR RPAREN RING POLY LIST GROUP FIELD ARROW ]
type_expr -> type_expr . GROUP [ STAR RPAREN RING POLY LIST GROUP FIELD ARROW ]
type_expr -> type_expr . RING [ STAR RPAREN RING POLY LIST GROUP FIELD ARROW ]
type_expr -> type_expr . FIELD [ STAR RPAREN RING POLY LIST GROUP FIELD ARROW ]
type_expr -> type_expr . POLY [ STAR RPAREN RING POLY LIST GROUP FIELD ARROW ]
type_expr -> LPAREN type_expr . RPAREN [ TYPE STAR RPAREN RING POLY LIST LET GROUP FIELD ARROW ]
## Transitions:
-- On STAR shift to state 37
-- On RPAREN shift to state 48
-- On RING shift to state 39
-- On POLY shift to state 40
-- On LIST shift to state 41
-- On GROUP shift to state 42
-- On FIELD shift to state 43
-- On ARROW shift to state 49
## Reductions:

State 37:
## Known stack suffix:
## type_expr STAR
## LR(1) items:
type_expr -> type_expr STAR . type_expr [ TYPE STAR RPAREN RING POLY LIST LET GROUP FIELD ARROW ]
## Transitions:
-- On VOID shift to state 5
-- On STRING shift to state 6
-- On NAME shift to state 7
-- On LPAREN shift to state 24
-- On LBRACE shift to state 25
-- On INT shift to state 33
-- On FLOAT shift to state 34
-- On BOOL shift to state 35
-- On type_expr shift to state 38
-- On adt_type_expr shift to state 44
-- On adt_opt shift to state 47
## Reductions:

State 38:
## Known stack suffix:
## type_expr STAR type_expr
## LR(1) items:
type_expr -> type_expr . LIST [ TYPE STAR RPAREN RING POLY LIST LET GROUP FIELD ARROW ]
type_expr -> type_expr . STAR type_expr [ TYPE STAR RPAREN RING POLY LIST LET GROUP FIELD ARROW ]
type_expr -> type_expr STAR type_expr . [ TYPE STAR RPAREN RING POLY LIST LET GROUP FIELD ARROW ]
type_expr -> type_expr . ARROW type_expr [ TYPE STAR RPAREN RING POLY LIST LET GROUP FIELD ARROW ]
type_expr -> type_expr . GROUP [ TYPE STAR RPAREN RING POLY LIST LET GROUP FIELD ARROW ]
type_expr -> type_expr . RING [ TYPE STAR RPAREN RING POLY LIST LET GROUP FIELD ARROW ]
type_expr -> type_expr . FIELD [ TYPE STAR RPAREN RING POLY LIST LET GROUP FIELD ARROW ]
type_expr -> type_expr . POLY [ TYPE STAR RPAREN RING POLY LIST LET GROUP FIELD ARROW ]
## Transitions:
-- On RING shift to state 39
-- On POLY shift to state 40
-- On LIST shift to state 41
-- On GROUP shift to state 42
-- On FIELD shift to state 43
## Reductions:
-- On TYPE STAR RPAREN RING POLY LIST LET GROUP FIELD ARROW
--   reduce production type_expr -> type_expr STAR type_expr
** Conflict on RING POLY LIST GROUP FIELD

State 39:
## Known stack suffix:
## type_expr RING
## LR(1) items:
type_expr -> type_expr RING . [ TYPE STAR RPAREN RING POLY LIST LET GROUP FIELD ARROW ]
## Transitions:
## Reductions:
-- On TYPE STAR RPAREN RING POLY LIST LET GROUP FIELD ARROW
--   reduce production type_expr -> type_expr RING

State 40:
## Known stack suffix:
## type_expr POLY
## LR(1) items:
type_expr -> type_expr POLY . [ TYPE STAR RPAREN RING POLY LIST LET GROUP FIELD ARROW ]
## Transitions:
## Reductions:
-- On TYPE STAR RPAREN RING POLY LIST LET GROUP FIELD ARROW
--   reduce production type_expr -> type_expr POLY

State 41:
## Known stack suffix:
## type_expr LIST
## LR(1) items:
type_expr -> type_expr LIST . [ TYPE STAR RPAREN RING POLY LIST LET GROUP FIELD ARROW ]
## Transitions:
## Reductions:
-- On TYPE STAR RPAREN RING POLY LIST LET GROUP FIELD ARROW
--   reduce production type_expr -> type_expr LIST

State 42:
## Known stack suffix:
## type_expr GROUP
## LR(1) items:
type_expr -> type_expr GROUP . [ TYPE STAR RPAREN RING POLY LIST LET GROUP FIELD ARROW ]
## Transitions:
## Reductions:
-- On TYPE STAR RPAREN RING POLY LIST LET GROUP FIELD ARROW
--   reduce production type_expr -> type_expr GROUP

State 43:
## Known stack suffix:
## type_expr FIELD
## LR(1) items:
type_expr -> type_expr FIELD . [ TYPE STAR RPAREN RING POLY LIST LET GROUP FIELD ARROW ]
## Transitions:
## Reductions:
-- On TYPE STAR RPAREN RING POLY LIST LET GROUP FIELD ARROW
--   reduce production type_expr -> type_expr FIELD

State 44:
## Known stack suffix:
## adt_type_expr
## LR(1) items:
adt_opt -> adt_type_expr . [ TYPE STAR RPAREN RING POLY LIST LET GROUP FIELD ARROW ]
adt_opt -> adt_type_expr . BAR adt_type_expr [ TYPE STAR RPAREN RING POLY LIST LET GROUP FIELD ARROW ]
## Transitions:
-- On BAR shift to state 45
## Reductions:
-- On TYPE STAR RPAREN RING POLY LIST LET GROUP FIELD ARROW
--   reduce production adt_opt -> adt_type_expr

State 45:
## Known stack suffix:
## adt_type_expr BAR
## LR(1) items:
adt_opt -> adt_type_expr BAR . adt_type_expr [ TYPE STAR RPAREN RING POLY LIST LET GROUP FIELD ARROW ]
## Transitions:
-- On NAME shift to state 7
-- On adt_type_expr shift to state 46
## Reductions:

State 46:
## Known stack suffix:
## adt_type_expr BAR adt_type_expr
## LR(1) items:
adt_opt -> adt_type_expr BAR adt_type_expr . [ TYPE STAR RPAREN RING POLY LIST LET GROUP FIELD ARROW ]
## Transitions:
## Reductions:
-- On TYPE STAR RPAREN RING POLY LIST LET GROUP FIELD ARROW
--   reduce production adt_opt -> adt_type_expr BAR adt_type_expr

State 47:
## Known stack suffix:
## adt_opt
## LR(1) items:
type_expr -> adt_opt . [ TYPE STAR RPAREN RING POLY LIST LET GROUP FIELD ARROW ]
## Transitions:
## Reductions:
-- On TYPE STAR RPAREN RING POLY LIST LET GROUP FIELD ARROW
--   reduce production type_expr -> adt_opt

State 48:
## Known stack suffix:
## LPAREN type_expr RPAREN
## LR(1) items:
type_expr -> LPAREN type_expr RPAREN . [ TYPE STAR RPAREN RING POLY LIST LET GROUP FIELD ARROW ]
## Transitions:
## Reductions:
-- On TYPE STAR RPAREN RING POLY LIST LET GROUP FIELD ARROW
--   reduce production type_expr -> LPAREN type_expr RPAREN

State 49:
## Known stack suffix:
## type_expr ARROW
## LR(1) items:
type_expr -> type_expr ARROW . type_expr [ TYPE STAR RPAREN RING POLY LIST LET GROUP FIELD ARROW ]
## Transitions:
-- On VOID shift to state 5
-- On STRING shift to state 6
-- On NAME shift to state 7
-- On LPAREN shift to state 24
-- On LBRACE shift to state 25
-- On INT shift to state 33
-- On FLOAT shift to state 34
-- On BOOL shift to state 35
-- On type_expr shift to state 50
-- On adt_type_expr shift to state 44
-- On adt_opt shift to state 47
## Reductions:

State 50:
## Known stack suffix:
## type_expr ARROW type_expr
## LR(1) items:
type_expr -> type_expr . LIST [ TYPE STAR RPAREN RING POLY LIST LET GROUP FIELD ARROW ]
type_expr -> type_expr . STAR type_expr [ TYPE STAR RPAREN RING POLY LIST LET GROUP FIELD ARROW ]
type_expr -> type_expr . ARROW type_expr [ TYPE STAR RPAREN RING POLY LIST LET GROUP FIELD ARROW ]
type_expr -> type_expr ARROW type_expr . [ TYPE STAR RPAREN RING POLY LIST LET GROUP FIELD ARROW ]
type_expr -> type_expr . GROUP [ TYPE STAR RPAREN RING POLY LIST LET GROUP FIELD ARROW ]
type_expr -> type_expr . RING [ TYPE STAR RPAREN RING POLY LIST LET GROUP FIELD ARROW ]
type_expr -> type_expr . FIELD [ TYPE STAR RPAREN RING POLY LIST LET GROUP FIELD ARROW ]
type_expr -> type_expr . POLY [ TYPE STAR RPAREN RING POLY LIST LET GROUP FIELD ARROW ]
## Transitions:
-- On STAR shift to state 37
-- On RING shift to state 39
-- On POLY shift to state 40
-- On LIST shift to state 41
-- On GROUP shift to state 42
-- On FIELD shift to state 43
## Reductions:
-- On TYPE RPAREN RING POLY LIST LET GROUP FIELD ARROW
--   reduce production type_expr -> type_expr ARROW type_expr
** Conflict on RING POLY LIST GROUP FIELD
